--- a/components/recover-password-code.html
+++ b/components/recover-password-code.html
@@ -4,7 +4,7 @@
             <div id="recover-pass-code-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
                 <form id="recoverPassCodeForm" name="recoverPassCodeForm">
                     <div layout="row" layout-align="center center">
-                        <img src="../smartStudio/img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Studio">
+                        <img src="../img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
                     </div>
                     <div layout="column">
                         <div layout="row" layout-align="center center" class="padding-bottom-10 padding-top-5">
