--- a/components/recover-password.html
+++ b/components/recover-password.html
@@ -1,37 +1,37 @@
 <div>
     <div layout="column"  class="height-100-vh">
-    <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
-        <div id="recover-pass-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
-            <form id="recoverPassForm" name="recoverPassForm">
-                <div layout="row" layout-align="center center">
-                    <img src="../smartStudio/img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Studio">
-                </div>
-                <div layout="column">
-                    <div layout="row" layout-align="center center" class="padding-bottom-10 padding-top-5">
-                        <h1 class="font-iceberg font-x-large">SAFETY IoT PLATFORM</h1>
+        <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
+            <div id="recover-pass-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
+                <form id="recoverPassForm" name="recoverPassForm">
+                    <div layout="row" layout-align="center center">
+                        <img src="../img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
                     </div>
-                    <md-input-container class="margin-top-0 margin-bottom-0">
-                        <label for="emailInput" class="font-smal">Email</label>
-                        <input required type="email" id="emailInput" name="emailInput" ng-model="email" ng-pattern="/^.+@.+\..+$/" title="">
-                        <div ng-messages="recoverPassForm.emailInput.$error || changePassForm.$submitted">
-                            <div ng-message="required">Inserire una email</div>
-                            <div ng-message="pattern">Inserire una email valida</div>
+                    <div layout="column">
+                        <div layout="row" layout-align="center center" class="padding-bottom-10 padding-top-5">
+                            <h1 class="font-iceberg font-x-large">SAFETY IoT PLATFORM</h1>
                         </div>
-                    </md-input-container>
-                    <div class="background-transparent-white text-center font-smal color-red
-                                margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">Email non registrata</div>
-                    <div class="background-transparent-white text-center color-red font-smal
-                                margint-top-5-px margin-bottom-10-px padding-10-px"
-                                  ng-show="errorHandeling.noConnection">Impossibile communicare con il server</div>
-                    <md-button id="recoverPassButton" ng-click="sendRecoverPassword(recoverPassForm)" class="md-raised margin-bottom-10">Recupera password</md-button>
-                </div>
-            </form>
+                        <md-input-container class="margin-top-0 margin-bottom-0">
+                            <label for="emailInput" class="font-smal">Email</label>
+                            <input required type="email" id="emailInput" name="emailInput" ng-model="email" ng-pattern="/^.+@.+\..+$/" title="">
+                            <div ng-messages="recoverPassForm.emailInput.$error || recoverPassForm.$submitted">
+                                <div ng-message="required">Inserire una email</div>
+                                <div ng-message="pattern">Inserire una email valida</div>
+                            </div>
+                        </md-input-container>
+                        <div class="background-transparent-white text-center font-smal color-red
+                                    margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">Email non registrata</div>
+                        <div class="background-transparent-white text-center color-red font-smal
+                                    margint-top-5-px margin-bottom-10-px padding-10-px"
+                                      ng-show="errorHandeling.noConnection">Impossibile communicare con il server</div>
+                        <md-button id="recoverPassButton" ng-click="sendRecoverPassword(recoverPassForm)" class="md-raised margin-bottom-10">Recupera password</md-button>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
-    <div layout="row" layout-align="center">
-        <p class="font-smal padding-10-px background-transparent-white">Ti verrà inviato un codice di verifica all'inidrizzo email inserito. L'indirizzo email deve essere
-            associato ad un account Smart Studio!
-        </p>
-    </div>
+        <div layout="row" layout-align="center">
+            <p class="font-smal padding-10-px background-transparent-white">Ti verrà inviato un codice di verifica all'inidrizzo email inserito. L'indirizzo email deve essere
+                associato ad un account Smart Studio!
+            </p>
+        </div>
     </div>
 </div>
