--- a/components/canvas.html
+++ b/components/canvas.html
@@ -1,18 +1,19 @@
 <div>
     <div layout="column"  class="height-100-vh">
+        <!--setting button-->
         <div class="top-corner">
             <md-fab-speed-dial md-open="isOpen" md-direction="{{speedDial.selectedDirection}}"
                                ng-class="speedDial.mode">
                 <md-fab-trigger>
                     <md-button aria-label="menu" class="md-fab background-darkcyan">
-                        <img src="../smartStudio/img/setting.png" class="setting-image" alt="">
+                        <img src="../img/setting.png" class="setting-image" alt="Modifica impostazioni pagina" title="Modifica impostazioni pagina">
                     </md-button>
                 </md-fab-trigger>
 
                 <md-fab-actions>
                     <div layout="column" class="padding-lr-15-px">
                         <div flex="100" layout layout-align="center center">
-                            <span class="font-medium color-darkcyan">Spaziatura griglia: <b>{{speedDial.gridSpacing}}</b></span>
+                            <span class="font-medium color-white">Spaziatura griglia: <b>{{speedDial.gridSpacing}}</b></span>
                         </div>
                         <md-slider-container flex="100">
                             <md-slider md-discrete ng-model="speedDial.gridSpacing" min="10" max="1000" step="10" aria-label="speedDial.gridSpacing" class="md-primary"></md-slider>
@@ -20,32 +21,51 @@
                     </div>
                     <div layout="column" class="padding-lr-15-px border-right-1-darkcyan" layout-align="center center">
                         <div flex="100" layout layout-align="center center">
-                            <span class="font-medium color-darkcyan" ng-show="grid.showGrid">Griglia: <b class="color-green">ON</b></span>
-                            <span class="font-medium color-darkcyan" ng-show="!grid.showGrid">Griglia: <b class="color-red">OFF</b></span>
+                            <span class="font-medium color-white" ng-show="grid.showGrid">Griglia: <b class="color-green">ON</b></span>
+                            <span class="font-medium color-white" ng-show="!grid.showGrid">Griglia: <b class="color-red">OFF</b></span>
                         </div>
                         <md-switch class="md-primary margin-none margin-top-10" ng-change="switchChanged" md-no-ink aria-label="Switch No Ink" ng-model="grid.showGrid">
+                        </md-switch>
+                    </div>
+                    <div layout="column" class="padding-lr-15-px border-right-1-darkcyan" layout-align="center center">
+                        <div flex="100" layout layout-align="center center">
+                            <span class="font-medium color-white">Fullscreen</span>
+                        </div>
+                        <md-switch class="md-primary margin-none margin-top-10" ng-change="switchChanged" md-no-ink aria-label="Switch No Ink" ng-model="speedDial.fullscreen">
                         </md-switch>
                     </div>
                 </md-fab-actions>
             </md-fab-speed-dial>
         </div>
-        <div layout="column" layout-align="center center" class="background-white">
-            <h1>Ospedale Bolzano</h1>
-            <h3>Piano: {{floor.name}}</h3>
+        <!--end setting buttoon-->
+
+        <!--header text-->
+        <div layout="row" layout-align="start center" class="background-ottanio width-100" style="padding-left: 3%;">
+            <img src="../img/login-icon.png" class="width-5 margin-right-10-px" alt="Smart Track" title="Smart Track">
+            <div class="margin-bottom-30-px">
+                <p class="canvas-location color-darkcyan" style=" font-size: xx-large">{{header.location | uppercase}}</p>
+                <p class="canvas-floor color-cyan" style="font-size: medium; padding-left: 2%; float: right;">{{header.name}}</p>
+            </div>
         </div>
-        <div id="canvas-container" layout="row"  layout-align="center start" class="parent-size">
+        <!--end header text-->
+
+        <!--canvas container-->
+        <div id="canvas-container" layout="row"  layout-align="center start" class="parent-size background-ottanio">
             <canvas id="canvas-id" class="width-100"></canvas>
         </div>
+        <!--end canvas container-->
+
+        <!--menu container-->
         <div>
             <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--8-px cursor-pointer outline-none">
-                <img id="open-menu-icon" src="../smartStudio/img/menu-arrow.png" alt="">
+                <img id="open-menu-icon" src="../img/menu-arrow.png" alt="Menu" title="Menu">
             </div>
             <section layout="row" flex>
                 <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-disable-backdrop md-whiteframe="4">
                     <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
                         <h1 class="md-toolbar-tools color-black">Menu</h1>
                         <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                            <img src="../smartStudio/img/close-menu.png" alt="">
+                            <img src="../img/close-menu.png" alt="Chiudi menu" title="Chiudi menu">
                         </div>
                     </md-toolbar>
                     <md-content layout-margin class="margin-top-10">
@@ -54,19 +74,20 @@
                         </div>
                         <div layout="column">
                             <md-list>
-                                <md-list-item ng-click="registry()"><p>Anagrafica</p><img src="../smartStudio/img/anagrafica-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click=""><p>Ancore</p><img src="../smartStudio/img/ancora-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click=""><p>Seleziona piano</p><img src="../smartStudio/img/floor-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../smartStudio/img/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click=""><p>Storico</p><img src="../smartStudio/img/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../smartStudio/img/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click=""><p>Cambia password</p><img src="../smartStudio/img/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                <md-list-item ng-click="logout()"><p>Logout</p><img src="../smartStudio/img/logout-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click="registry()"><p>Anagrafica</p><img src="../img/anagrafica-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Ancore</p><img src="../img/ancora-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Seleziona piano</p><img src="../img/floor-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../img/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Storico</p><img src="../img/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../img/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Cambia password</p><img src="../img/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click="logout()"><p>Logout</p><img src="../img/logout-icon.png" class="menu-list-icon" alt=""></md-list-item>
                             </md-list>
                         </div>
                     </md-content>
                 </md-sidenav>
             </section>
         </div>
+        <!--end menu container-->
     </div>
 </div>
