--- a/components/login.html
+++ b/components/login.html
@@ -1,9 +1,9 @@
 <div>
-    <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-100-vh" style="z-index: 100">
+    <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-100-vh zindex-100">
         <div id="login-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
             <form id="loginForm" name="loginForm">
                 <div layout="row" layout-align="center center">
-                    <img src="../smartStudio/img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Studio">
+                    <img src="../img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
                 </div>
                 <div layout="column">
                     <div layout="row" layout-align="center center" class="padding-bottom-10 padding-top-5">
