--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,31 @@ DIMENSIONS
     width: 100%;
 }
 
+.width-5{
+    width: 5%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /******************************************************************
 FONTS
  */
@@ -113,7 +138,9 @@ MARGINS
     margin-top: -20px!important;
 }
 
-
+.margin-bottom-30-px{
+    margin-bottom: 30px;
+}
 
 
 
@@ -226,7 +253,9 @@ COLOR
     color: #3754AF!important;
 }
 
-
+.color-cyan{
+    color: #4fc3f7;
+}
 
 
 
@@ -253,7 +282,9 @@ OTHER
     height: 15px;
 }
 
-
+.zindex-100{
+    z-index: 100!important;
+}
 
 
 
@@ -329,7 +360,7 @@ POSITION
 
 .top-corner{
     position: absolute;
-    top: 15px;
+    top: 5px;
     right: 0;
 }
 
