--- a/components/canvas.html
+++ b/components/canvas.html
@@ -1,7 +1,8 @@
 <div>
     <div layout="column"  class="height-100-vh">
-        <!--setting button-->
+        <!--draw button-->
         <div class="top-corner" ng-show="drawing.showDrawing">
+
             <md-fab-speed-dial md-open="isOpen" md-direction="{{speedDial.selectedDirection}}"
                                ng-class="speedDial.mode">
                 <md-fab-trigger>
@@ -14,26 +15,29 @@
                     <md-button class="md-fab md-raised md-mini background-ottanio border-3-darkblue">
                         <img src="../img/vertical-line.png" class="width-100 height-100" alt="Disegna riga verticale" title="Disegna riga verticale">
                     </md-button>
+
                     <md-button class="md-fab md-raised md-mini background-ottanio border-3-darkblue">
                         <img src="../img/horizontal-line.png" class="width-100 height-100" alt="Disegna riga orizontale" title="Disegna riga orizontale">
                     </md-button>
+
                     <md-button class="md-fab md-raised md-mini background-ottanio border-3-darkblue">
                         <img src="../img/inclined-line.png" class="width-100 height-100" alt="Disegna riga inclinata" title="Disegna riga inclinata">
                     </md-button>
+
                     <md-button class="md-fab md-raised md-mini background-ottanio border-3-darkblue">
                         <img src="../img/free-draw.png" class="width-100 height-100" alt="Disegna riga inclinata" title="Disegna riga inclinata">
                     </md-button>
                 </md-fab-actions>
             </md-fab-speed-dial>
         </div>
-        <!--end setting buttoon-->
+        <!--end draw buttoon-->
 
         <!--header text-->
-        <div layout="row" layout-align="start center" class="background-ottanio width-100" style="padding-left: 3%;">
-            <img src="../img/login-icon.png" class="width-5 margin-right-10-px" alt="Smart Track" title="Smart Track">
+        <div layout="row" layout-align="center center" class="background-ottanio width-100" style="padding-left: 3%;">
+            <img src="../img/login-icon.png" class="canvas-header-image" alt="Smart Track" title="Smart Track">
             <div class="margin-bottom-30-px">
-                <p class="canvas-location color-darkcyan" style=" font-size: xx-large">{{header.location | uppercase}}</p>
-                <p class="canvas-floor color-cyan" style="font-size: medium; padding-left: 2%; float: right;">{{header.name}}</p>
+                <p class="canvas-location color-darkcyan">{{header.location | uppercase}}</p>
+                <p class="canvas-floor color-cyan">{{header.name}}</p>
             </div>
         </div>
         <!--end header text-->
@@ -49,18 +53,24 @@
             <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--8-px cursor-pointer outline-none">
                 <img id="open-menu-icon" src="../img/menu-arrow.png" alt="Menu" title="Menu">
             </div>
+
             <section layout="row" flex>
+
                 <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-disable-backdrop md-whiteframe="4">
+
                     <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
                         <h1 class="md-toolbar-tools color-black">Menu</h1>
                         <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
                             <img src="../img/close-menu.png" alt="Chiudi menu" title="Chiudi menu">
                         </div>
                     </md-toolbar>
+
                     <md-content layout-margin class="margin-top-10">
                         <div layout="column" layout-align="center center">
+                            <img src="../img/login-icon.png" class="home-menu-logo" alt="Smart Track" title="Smart Track">
                             <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
                         </div>
+
                         <div layout="column" id="menu-container">
                             <md-list ng-controller="menuController">
                                 <md-list-item ng-click="registry($$event)"><p>Aggiorna WeTag</p><img src="../img/anagrafica-icon.png" class="menu-list-icon" alt=""></md-list-item>
@@ -76,67 +86,81 @@
                             <md-subheader class="background-lightcyan color-black margin-bottom-10-px margin-top-10-px">Azzioni immediate</md-subheader>
 
                             <div id="change-floor-container" layout="column" class="padding-10-px" layout-align="center center">
+
                                 <md-input-container class="margin-bottom-0 margin-top-10">
+
                                     <label>Selezione piano</label>
+
                                     <md-select ng-model="floors.defaultFloor">
+
                                         <md-option ng-repeat="floor in floors.result" ng-value="floor.name">
                                             {{floor.name}}
                                         </md-option>
                                     </md-select>
                                 </md-input-container>
                             </div>
+
                             <div id="change-grid-container" layout="column" class="padding-10-px">
+
                                 <div flex="100" layout layout-align="center center">
                                     <md-subheader class="padding-0 width-100 zindex-0">Spaziatura griglia: <b>{{speedDial.gridSpacing}}</b><md-subheader>
                                 </div>
+
                                 <md-slider-container flex="100">
                                     <md-slider md-discrete ng-model="gridSpacing" min="10" max="1000" step="10" aria-label="speedDial.gridSpacing" class="md-primary"></md-slider>
                                 </md-slider-container>
                             </div>
+
                             <div layout="row" layout-align="center center">
+
                                 <div id="grid-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">
+
                                     <div flex="100" layout layout-align="center center">
                                         <md-subheader class="padding-0" ng-show="grid.showGrid">Griglia: <b class="color-green">ON</b></md-subheader>
                                         <md-subheader class="padding-0" ng-show="!grid.showGrid">Griglia: <b class="color-red">OFF</b></md-subheader>
                                     </div>
+
                                     <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="" ng-model="grid.showGrid">
                                     </md-switch>
                                 </div>
+
                                 <div id="fullscreen-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">
+
                                     <div flex="100" layout layout-align="center center">
                                         <md-subheader class="padding-0">Fullscreen: <b class="color-red">OFF</b></md-subheader>
                                     </div>
+
                                     <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="Switch No Ink" ng-model="speedDial.fullscreen">
                                     </md-switch>
                                 </div>
                             </div>
                             <div layout="row" layout-align="center center">
+
                                 <div id="anchors-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">
+
                                     <div flex="100" layout layout-align="center center">
                                         <md-subheader class="padding-0" ng-show="anchors.showAnchors">Anchors: <b class="color-green">ON</b></md-subheader>
                                         <md-subheader class="padding-0" ng-show="!anchors.showAnchors">Anchors: <b class="color-red">OFF</b></md-subheader>
                                     </div>
+
                                     <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="" ng-model="anchors.showAnchors">
                                     </md-switch>
                                 </div>
+
                                 <div id="cameras-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">
+
                                     <div flex="100" layout layout-align="center center">
                                         <md-subheader class="padding-0" ng-show="cameras.showCameras">Cameras: <b class="color-green">ON</b></md-subheader>
                                         <md-subheader class="padding-0" ng-show="!cameras.showCameras">Cameras: <b class="color-red">OFF</b></md-subheader>
                                     </div>
+
                                     <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="" ng-model="cameras.showCameras">
                                     </md-switch>
                                 </div>
                             </div>
+
                             <div layout="row" layout-align="center center">
-                                <!--<div id="radius-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">-->
-                                    <!--<div flex="100" layout layout-align="center center">-->
-                                        <!--<md-subheader class="padding-0" ng-show="radius.showRadius">Radius: <b class="color-green">ON</b></md-subheader>-->
-                                        <!--<md-subheader class="padding-0" ng-show="!anchors.showRadius">Radius: <b class="color-red">OFF</b></md-subheader>-->
-                                    <!--</div>-->
-                                    <!--<md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="" ng-model="radius.showRadius">-->
-                                    <!--</md-switch>-->
-                                <!--</div>-->
+
                                 <div id="drawing-on-off-container" layout="column" class="padding-10-px width-100" layout-align="center center">
                                     <div flex="100" layout layout-align="center center">
                                         <md-subheader class="padding-0" ng-show="drawing.showDrawing">Modalita' disegna: <b class="color-green">ON</b></md-subheader>
