--- a/components/canvas.html
+++ b/components/canvas.html
@@ -7,7 +7,7 @@
                                ng-class="speedDial.mode">
                 <md-fab-trigger>
                     <md-button aria-label="menu" class="md-fab background-darkcyan">
-                        <img src="../img/edit-icon.png" class="setting-image" alt="Modifica impostazioni pagina" title="Modifica impostazioni pagina">
+                        <img src="../img/edit-icon.png" class="edit-image" alt="Modifica impostazioni pagina" title="Modifica impostazioni pagina">
                     </md-button>
                 </md-fab-trigger>
 
