--- a/css/custom.css
+++ b/css/custom.css
@@ -1,21 +1,20 @@
 /******************************************************************
 DIMENSIONS
- */
+*******************************************************************/
 .height-100-vh{
     height: 100vh;
-}
-
-.height-90{
-    height: 90%;
 }
 
 .height-100{
     height: 100%;
 }
 
-.parent-size{
-    width: 100%;
-    height: 100%;
+.width-50{
+    width: 50%;
+}
+
+.height-90{
+    height: 90%;
 }
 
 .width-100{
@@ -30,10 +29,10 @@ DIMENSIONS
     width: 300px;
 }
 
-.width-50{
-    width: 50%;
+.parent-size{
+    width: 100%;
+    height: 100%;
 }
-
 
 
 
@@ -53,7 +52,8 @@ DIMENSIONS
 
 /******************************************************************
 FONTS
- */
+*******************************************************************/
+
 .font-oswald{
     font-family: 'Oswald', sans-serif;
 }
@@ -95,7 +95,8 @@ FONTS
 
 /******************************************************************
 FRAMEWORK
- */
+*******************************************************************/
+
 
 
 
@@ -105,25 +106,10 @@ FRAMEWORK
 
 /******************************************************************
 MARGINS
- */
+*******************************************************************/
+
 .margin-none{
     margin: 0!important;
-}
-
-.margin-bottom-10{
-    margin-bottom: 10% !important;
-}
-
-.margin-right-10-px{
-    margin-right: 10px;
-}
-
-.margin-left--8-px{
-    margin-left: -8px;
-}
-
-.margin-bottom-0{
-    margin-bottom: 0;
 }
 
 .margin-top-0{
@@ -134,6 +120,10 @@ MARGINS
     margin-top: 10% !important;
 }
 
+.margin-top--20-px{
+    margin-top: -20px!important;
+}
+
 .margin-top-10-px{
     margin-top: 10px!important;
 }
@@ -142,18 +132,29 @@ MARGINS
     margin-top: 5px!important;
 }
 
+.margin-bottom-10{
+    margin-bottom: 10% !important;
+}
+
 .margin-bottom-10-px{
     margin-bottom: 10px!important;
 }
 
-.margin-top--20-px{
-    margin-top: -20px!important;
+.margin-bottom-0{
+    margin-bottom: 0;
 }
 
 .margin-bottom-30-px{
     margin-bottom: 30px;
 }
 
+.margin-right-10-px{
+    margin-right: 10px;
+}
+
+.margin-left--8-px{
+    margin-left: -8px;
+}
 
 
 
@@ -168,9 +169,18 @@ MARGINS
 
 /******************************************************************
 PADDING
- */
+*******************************************************************/
+
+.padding-top-5{
+    padding-top: 5%;
+}
+
 .padding-bottom-10{
     padding-bottom: 10%;
+}
+
+.padding-0{
+    padding: 0!important;
 }
 
 .padding-40-px{
@@ -181,10 +191,6 @@ PADDING
     padding: 10px;
 }
 
-.padding-top-5{
-    padding-top: 5%;
-}
-
 .padding-lr-15-px{
     padding: 0 15px 0 15px;
 }
@@ -193,13 +199,22 @@ PADDING
     padding: 5px 70px 5px 70px;
 }
 
-.padding-0{
-    padding: 0!important;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 /******************************************************************
 BORDER
- */
+*******************************************************************/
+
 .border-1-black{
     border: 1px solid black;
 }
@@ -212,6 +227,18 @@ BORDER
     border: 1px solid #E12315;
 }
 
+.border-2-lightbalck{
+    border: 2px solid #263238;
+}
+
+.border-3-darkblue{
+    border: 3px solid #0093c4!important;
+}
+
+.border-right-1-darkcyan{
+    border-right: 1px solid #0093c4;
+}
+
 .border-radius-20-px{
     border-radius: 20px;
 }
@@ -220,24 +247,19 @@ BORDER
     border-radius: 50%;
 }
 
-.border-2-lightbalck{
-    border: 2px solid #263238;
-}
 
-.border-right-1-darkcyan{
-    border-right: 1px solid #0093c4;
-}
 
-.border-3-darkblue{
-    border: 3px solid #0093c4!important;
-}
+
+
+
 
 
 
 
 /******************************************************************
 COLOR
- */
+*******************************************************************/
+
 .color-white{
     color: #FFFFFF;
 }
@@ -285,7 +307,8 @@ COLOR
 
 /******************************************************************
 OTHER
- */
+*******************************************************************/
+
 .cursor-pointer{
     cursor: pointer;
 }
@@ -294,23 +317,27 @@ OTHER
     outline: none;
 }
 
-.menu-list-icon{
-    width: 15px;
-    height: 15px;
+.zindex-0{
+    z-index: 0!important;
 }
 
 .zindex-100{
     z-index: 100!important;
 }
 
-.zindex-0{
-    z-index: 0!important;
-}
+
+
+
+
+
+
+
 
 
 /******************************************************************
 DISPLAY
- */
+*******************************************************************/
+
 
 
 
@@ -320,7 +347,8 @@ DISPLAY
 
 /******************************************************************
 SHADOW
- */
+*******************************************************************/
+
 .box-shadow-40-4-white{
     box-shadow: 0 0 40px 4px #fff;
 }
@@ -333,7 +361,8 @@ SHADOW
 
 /******************************************************************
 BACKGROUND
- */
+*******************************************************************/
+
 .background-transparent{
     background-color: transparent;
 }
@@ -374,9 +403,22 @@ BACKGROUND
     background-color: #4fc3f7!important;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
 /******************************************************************
 POSITION
- */
+*******************************************************************/
+
 .float-right{
     float: right;
 }
