--- a/components/home.html
+++ b/components/home.html
@@ -21,7 +21,7 @@
             <div flex="100">
 
                 <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--8-px cursor-pointer outline-none">
-                    <img id="open-menu-icon" src="../img/menu-arrow.png" alt="">
+                    <img id="open-menu-icon" src="../img/icons/menu-arrow.png" alt="">
                 </div>
 
                 <section layout="row" flex>
@@ -31,26 +31,26 @@
                         <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
                             <h1 class="md-toolbar-tools color-black">Menu</h1>
                             <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                                <img src="../img/close-menu.png" alt="Close" title="Close">
+                                <img src="../img/icons/close-menu.png" alt="Close" title="Close">
                             </div>
                         </md-toolbar>
 
                         <md-content layout-margin class="margin-top-10">
 
                             <div layout="column" layout-align="center center">
-                                <img src="../img/login-icon.png" class="home-menu-logo" alt="Smart Track" title="Smart Track">
+                                <img src="../img/icons/login-icon.png" class="home-menu-logo" alt="Smart Track" title="Smart Track">
                                 <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
                             </div>
 
-                            <div layout="column">
+                            <div layout="column" ng-controller="menuController">
 
                                 <md-list>
-                                    <md-list-item ng-click=""><p>Insert location</p><img src="../img/icons/add-location.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../img/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Storico</p><img src="../img/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../img/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Cambia password</p><img src="../img/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click="logout()"><p>Logout</p><img src="../img/logout-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-show="isAdmin" ng-click=""><p>Insert location</p><img src="../img/icons/add-location.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../img/icons/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Storico</p><img src="../img/icons/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../img/icons/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Cambia password</p><img src="../img/icons/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click="logout()"><p>Logout</p><img src="../img/icons/logout-icon.png" class="menu-list-icon" alt=""></md-list-item>
                                 </md-list>
                             </div>
                         </md-content>
