--- a/components/login.html
+++ b/components/login.html
@@ -6,7 +6,7 @@
             <form id="loginForm" name="loginForm">
 
                 <div layout="row" layout-align="center center">
-                    <img src="../img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
+                    <img src="../img/icons/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
                 </div>
 
                 <div layout="column">
