--- a/components/recover-password.html
+++ b/components/recover-password.html
@@ -8,7 +8,7 @@
                 <form id="recoverPassForm" name="recoverPassForm">
 
                     <div layout="row" layout-align="center center">
-                        <img src="../img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
+                        <img src="../img/icons/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
                     </div>
 
                     <div layout="column">
