--- a/components/insert-location.html
+++ b/components/insert-location.html
@@ -30,37 +30,45 @@
                         <div ng-message=" required">Inserire un nome</div>
                     </div>
                 </md-input-container>
+
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
                     <input required type="text" ng-model="location.description" name="locationDescription" placeholder="Inserisci una descrizione">
                     <div ng-messages="insertLocationForm.locationDescription.$error || insertLocationForm.$submitted" role="alert">
                         <div ng-message=" required">Inserire una descrizione</div>
                     </div>
                 </md-input-container>
-                <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
-                    <input required type="text" ng-model="location.latitude" name="locationLat" placeholder="Inserisci la latitudine">
-                    <div ng-messages="insertLocationForm.locationLat.$error || insertLocationForm.$submitted" role="alert">
-                        <div ng-message=" required">Inserire la latitudine</div>
-                    </div>
-                </md-input-container>
-                <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
-                    <input required type="text" ng-model="location.longitude" name="locationLon" placeholder="Inserisci la longitudine">
-                    <div ng-messages="insertLocationForm.locationLon.$error || insertLocationForm.$submitted" role="alert">
-                        <div ng-message=" required">Inserire la longitudine</div>
-                    </div>
-                </md-input-container>
+
+                <div layout="row">
+                    <md-input-container md-no-float class="md-block padding-right-10-px margin-bottom-0">
+                        <input required type="number" ng-model="location.latitude" name="locationLat" placeholder="latitude">
+                        <div ng-messages="insertLocationForm.locationLat.$error || insertLocationForm.$submitted" role="alert">
+                            <div ng-message=" required">Inserire la latitudine</div>
+                        </div>
+                    </md-input-container>
+
+                    <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
+                        <input required type="number" ng-model="location.longitude" name="locationLon" placeholder="longitude">
+                        <div ng-messages="insertLocationForm.locationLon.$error || insertLocationForm.$submitted" role="alert">
+                            <div ng-message=" required">Inserire la longitudine</div>
+                        </div>
+                    </md-input-container>
+                </div>
 
                 <div class="background-transparent-white text-center color-green font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
-                     ng-show="location.resultOk">
-                    Posizione inserita con successo!
+                     ng-show="location.showSuccess">
+                    {{location.message}}
                 </div>
 
                 <div class="background-transparent-white text-center color-red font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
-                     ng-show="location.resultError">
-                    Impossibile inseerire la posizione..
+                     ng-show="location.showError">
+                    {{location.message}}
                 </div>
 
-                <div layout="column" layout-align="center center">
-                    <md-button ng-click="changeTagName(insertLocationForm)" class="md-warn color-darkblue">INVIA</md-button>
+                <div layout="row" layout-align="end end" class="width-100">
+                    <div layout="column" layout-align="end start" class="width-100">
+                        <md-button ng-click="uploadMarkerImage()" class="color-orange"><label><input type="file" class="ng-hide" id="marker-image"></label>SELEZIONA IMMAGINE</md-button>
+                    </div>
+                    <md-button ng-click="insertLocation(insertLocationForm)" class="md-warn color-darkblue">INVIA</md-button>
                 </div>
             </form>
         </div>
