HISTORY, CHANGE PASSWORD, LOGOUT
Implementata la history con filtro per evento e per tag.
Implementato il cambio password con la gestione degli errori.
Implementato il logout

--- a/components/change-password.html
+++ b/components/change-password.html
@@ -48,18 +48,13 @@
                 </md-input-container>
 
                 <div class="background-transparent-white text-center color-green font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
-                     ng-show="changePassword.resultOk">
-                    Password cambiata con successo!
+                     ng-show="changePassword.showSuccess">
+                    {{changePassword.message}}
                 </div>
 
                 <div class="background-transparent-white text-center color-red font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
-                     ng-show="changePassword.resultError">
-                    Le password non coincidono.
-                </div>
-
-                <div class="background-transparent-white text-center color-red font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
-                     ng-show="changePassword.wrongOld">
-                    Password vecchia sbagliata.
+                     ng-show="changePassword.showError">
+                    {{changePassword.message}}
                 </div>
 
                 <div layout="column" layout-align="center center">
