--- a/components/home.html
+++ b/components/home.html
@@ -42,10 +42,8 @@
                             <div layout="column">
                                 <md-list>
                                     <md-list-item ng-show="isAdmin" ng-click="insertLocation()"><p>Insert location</p><img src="../img/icons/add-location.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../img/icons/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Storico</p><img src="../img/icons/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../img/icons/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Cambia password</p><img src="../img/icons/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click="viewHistory()"><p>Storico</p><img src="../img/icons/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click="changePassword()"><p>Cambia password</p><img src="../img/icons/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
                                     <md-list-item ng-click="logout()"><p>Logout</p><img src="../img/icons/logout-icon.png" class="menu-list-icon" alt=""></md-list-item>
                                 </md-list>
 
@@ -54,13 +52,12 @@
                                 <div id="change-floor-container" layout="column" class="padding-10-px" layout-align="center center">
 
                                     <md-input-container class="margin-bottom-0 margin-top-10">
-
                                         <label>Cerca WeTag</label>
 
-                                        <md-select ng-model="floors.defaultFloor">
+                                        <md-select ng-model="search.selectedTag">
 
-                                            <md-option ng-repeat="floor in tags" ng-value="floor.name">
-                                                {{floor.name}}
+                                            <md-option ng-repeat="tag in tags" ng-value="tag.name">
+                                                {{tag.name}}
                                             </md-option>
                                         </md-select>
                                     </md-input-container>
